--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
     "core-js": "^3.8.3",
+    "leaflet": "^1.9.4",
+    "three": "^0.159.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
