--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "chart.js": "^3.9.1",
+    "canvas-gauges": "^2.1.7",
+    "chart.js": "^4.4.1",
+    "chartjs": "^0.3.24",
     "core-js": "^3.8.3",
     "leaflet": "^1.9.4",
     "three": "^0.159.0",
     "vue": "^3.2.13",
-    "vue-chart-3": "^3.1.8",
-    "vue-chartjs": "^5.2.0"
+    "vue-chartjs": "^5.2.0",
+    "vue-gauge": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
